[package]
name = "sdf_parser"
version = "0.1.0"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"

[dependencies]
insta = "0.16"
indoc = "0.3"
anyhow = "1.0"
pest = "2.1"
pest_derive = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.3.7"
