[package]
name = "data_parser"
version = "0.1.0"
authors = ["Mathias Iversen <work@mathiasiversen.com>"]
edition = "2018"
license = "MIT"
description = "A modern, JSON compatible, data parser"
keywords = ["data", "parser", "json"]
categories = ["parsing"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
pest = "2.1"
pest_derive = "2.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.19"

[dev-dependencies]
insta = "0.16"
indoc = "0.3"
